--- a/index.html
+++ b/index.html
@@ -27,55 +27,49 @@
         <div class="main-right">
             <img  src="./images/main-sample-img.jpg">
         </div>
+    </div>
 
-        <div class="secondary-section">
-            <h2>Some random information.</h2>
+    <div class="secondary-section">
+        <h2>Some random information.</h2>
 
-            <ul class="cards-container">
-                <li class="card">
-                    <div class="img-container">
-                        <img src="./images/sample1.jpg">
-                    </div>
-                    <p>this is some subtext under an illustration or image</p>
-                </li>
-                <li class="card">
-                    <div class="img-container">
-                        <img src="./images/sample2.jpg">
-                    </div>
-                    <p>this is some subtext under an illustration or image</p>
-                </li>
-                <li class="card">
-                    <div class="img-container">
-                        <img src="./images/sample3.jpg">
-                    </div>
-                    <p>this is some subtext under an illustration or image</p>
-                </li>
-                <li class="card">
-                    <div class="img-container">
-                        <img src="./images/sample4.jpg">
-                    </div>
-                    <p>this is some subtext under an illustration or image</p>
-                </li>
-            </ul>
-        </div>
+        <ul class="cards-container">
+            <li class="card">
+                <img src="./images/sample1.jpg">
+                <p>this is some subtext under an illustration or image</p>
+            </li>
+            <li class="card">
+                <img src="./images/sample2.jpg">
+                <p>this is some subtext under an illustration or image</p>
+            </li>
+            <li class="card">
+                <img src="./images/sample3.jpg">
+                <p>this is some subtext under an illustration or image</p>
+            </li>
+            <li class="card">
+                <img src="./images/sample4.jpg">
+                <p>this is some subtext under an illustration or image</p>
+            </li>
+        </ul>
+    </div>
 
-        <div class="quote">
-            <p>
-                <em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em>
-            </p>
-            <p>-Thor, God of Thunder</p>
-        </div>
+    <div class="quote-container">
+        <p class="quote">
+            <em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em>
+        </p>
+        <p class="attr">-Thor, God of Thunder</p>
+    </div>
 
-        <div class="call-container">
-            <div class="call-to-action">
-                <div class="action-text">
-                    <h3>Call to action! It's time!</h3>
-                    <p>Sign up for our product by clicking that button right over there!</p>
-                </div>
-                <button>Sign up</button>
+    <div class="call-container">
+        <div class="call-to-action">
+            <div class="action-text">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
             </div>
+            <button>Sign up</button>
         </div>
+    </div>
 
+    <div class="footer">
         <footer>Copyright © The Odin Project 2021</footer>
     </div>
     
